# projeto_etl_gitactions

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: etl.py  pipeline.py
