[tool.poetry]
name = "aula-08"
version = "0.1.0"
description = ""
authors = ["Bruno <bruno.eng.proj@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandera = "^0.21.1"
pandas = "^2.2.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
